# pc1-mocking-demo

./: README.md  makefile  pyproject.toml
app/: adapters_fake.py  api.py  domain.py  main.py  ports.py
tests/: test_api.py  test_domain.py
