[tool.poetry]
name = "fastapi-mocks-demo"
version = "0.1.0"
description = "Demo breve: mockear un servicio externo en FastAPI"
authors = ["PieroVioleta <piero759@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
pydantic = ">=2.5"
httpx = ">=0.27"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = "^0.23.8"


[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
